[package]
name = "rust_room_generator"
version = "0.1.0"
authors = ["Ian Huezo <ianhuezo@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "room_gen"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = {version="0.7", features=["wasm-bindgen"]}
num = "0.2.1"
num-integer = "0.1.43"
linked-hash-map = "0.5.3"
serde = { version = "1.0", features = ["derive", "rc"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = {version = "0.3.44", features = ["console"]}